--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -21,9 +21,8 @@
                                             <option value="{{ domain }}">{{ domain }}</option>
                                         {% endfor %}
                                     </select>
-                                    <div id="add-domain" class="btn btn-primary">
-                                        Add Domain
-                                    </div>
+                                    <a id="add-domain" class="btn btn-primary"
+                                       href='{{ url_for("RedirectsView:add_domain") }}'>Add Domain</a>
                                 </div>
                             </div>
                             <div class="row less-left-margin">
@@ -213,6 +212,8 @@
                         clearFields();
                     });
                 });
+
+{#                $('#add-domain')#}
 
                 $(".btn-alert").click(function () {
                     var redirect_data = {"redirect_id": $(this).attr('data-delete-id')};
