--- a/tinker/templates/admin/redirects/home.html
+++ b/tinker/templates/admin/redirects/home.html
@@ -22,7 +22,7 @@
                                         {% endfor %}
                                     </select>
                                     <a id="add-domain" class="btn btn-primary"
-                                       href='{{ url_for("RedirectsView:add_domain") }}'>Add Domain</a>
+                                       href='{{ url_for("RedirectsView:domain_homepage") }}'>Add Domain</a>
                                 </div>
                             </div>
                             <div class="row less-left-margin">
