E-Annz search AND
Search modified so that if both title and date fields are filled it
does an AND search not an OR search.

--- a/tinker/templates/events/home.html
+++ b/tinker/templates/events/home.html
@@ -92,8 +92,7 @@
                             <input id="eventTitle" type="text" name="EventTitle"><br/>
                             <small>The Start and End fields are to specify the date range where an event might fall,
                                 for example "New Years Eve" and "Christmas" would both show up if you started at
-                                December 25th
-                                and ended on December 31st
+                                December 25th and ended on December 31st
                             </small>
                             <label for="startDate">Start Date:</label>
                             <input id="startDate" class='datepicker' size='11'/>
