--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -10,29 +10,31 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
+
 <div class="content">
     <div class="container-fluid">
         <div class="col-md-12">
             <p class="description">Below is the list of E-Announcements you have access to edit. These are sorted by
-                the first date
-                entered, newest dates first.
+                the first date entered, newest dates first.
             </p>
-            <hr/>
-            <a href="{{ url_for('e_announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">Submit
-                New
-                E-Announcement</a>
-            {% if 'E-Announcement Approver' in session['groups'].split(';') or 'Administrators' in session['groups'].split(';') %}
+
+            <hr>
+
+            <a href="{{ url_for('e_announcements.EAnnouncementsView:new') }}" class="btn btn-primary new-btn">
+                Submit New E-Announcement</a>
+
+            {% if 'E-Announcement Approver' in session['groups'].split(';')
+                or 'Administrators' in session['groups'].split(';') %}
                 <a href="{{ url_for('e_announcements.EAnnouncementsView:ea_upcoming') }}"
-                   class="btn btn-primary new-btn">
-                    Upcoming E-Announcements</a>
+                   class="btn btn-primary new-btn">Upcoming E-Announcements</a>
             {% endif %}
+
             <br>
-            <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector"
-                    multiple>
+
+            <select class="horizontal-scroll" size="{{ all_schools|length }}" id="school-selector" multiple>
                 {% for school_code, school in all_schools.items() %}
                     {% if loop.first %}
-                        <option value="{{ school_code }}"
-                                selected="selected">{{ school }}</option>
+                        <option value="{{ school_code }}" selected="selected">{{ school }}</option>
                     {% elif not loop.last %}
                         <option value="{{ school_code }}">{{ school }}</option>
                     {% endif %}
@@ -64,51 +66,6 @@
             </div>
             <br>
             <div id="results"></div>
-
-            {#                    {% for form in forms %}#}
-            {#                        <div class="card">#}
-            {#                            <div class="content">#}
-            {#                                <p>#}
-            {#                                    {% if form.path != '' %}#}
-            {#                                        <a href={{ form.path }}>{{ form.title }}</a>#}
-            {#                                    {% else %}#}
-            {#                                        {{ form.title }}#}
-            {#                                    {% endif %}#}
-            {#                                    <br/>#}
-            {#                                    <small>{{ form.first_date | safe }}</small>#}
-            {#                                    <br/>#}
-            {#                                    <small>{{ form.second_date | safe }}</small>#}
-            {#                                </p>#}
-            {#                                <div class="large-6 columns small-3">#}
-            {#                                    <ul class="btn-group-horizontal">#}
-            {#                                        {% if form.workflow_status %}#}
-            {#                                            <li>This announcement is pending approval.</li>#}
-            {#                                        {% else %}#}
-            {#                                            {% if not form.first_date_past and not form.second_date_past %}#}
-            {#                                                <li>#}
-            {#                                                    <a href="{{ url_for('e_announcements.EAnnouncementsView:edit', e_announcement_id=form.id) }}"#}
-            {#                                                       class="btn btn-primary">Edit</a></li>#}
-            {#                                            {% else %}#}
-            {#                                                <li>#}
-            {#                                                    <a href="{{ url_for('e_announcements.EAnnouncementsView:view', e_announcement_id=form.id) }}"#}
-            {#                                                       class="btn btn-primary">View</a></li>#}
-            {#                                            {% endif %}#}
-            {#                                            <li>#}
-            {#                                                <a href="{{ url_for('e_announcements.EAnnouncementsView:duplicate', e_announcement_id=form.id) }}"#}
-            {#                                                   class="btn btn-primary">Duplicate</a></li>#}
-            {#                                            {% if not form.first_date_past %}#}
-            {#                                                <li><a href="#" data-reveal-id="confirmModal" id="{{ form.id }}"#}
-            {#                                                       data-e-announcement-id="{{ form.id }}"#}
-            {#                                                       class="small btn btn-primary btn-alert delete-press"#}
-            {#                                                       data-toggle="modal" data-target="#myModal">Delete</a></li>#}
-            {#                                            {% endif %}#}
-            {#                                        {% endif %}#}
-            {#                                    </ul>#}
-            {#                                </div>#}
-            {#                            </div>#}
-            {#                        </div>#}
-            {#                        <hr/>#}
-            {#                    {% endfor %}#}
         </div>
     </div>
 </div>
