Search Default Load
In Events and E-Annz when the home page is loaded the default is to
load My Events or My Annz.

--- a/tinker/templates/e-announcements/home.html
+++ b/tinker/templates/e-announcements/home.html
@@ -177,6 +177,7 @@
         $("#e-annz-submit-btn").click(function () {
             search_e_annz();
         });
+        search_e_annz();
 
 
     </script>
