--- a/tinker/templates/creative_tim_base.html
+++ b/tinker/templates/creative_tim_base.html
@@ -68,6 +68,9 @@
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
     <script src="https://cdn1.bethel.edu/tinker/js/paper-dashboard.js"></script>
 
+    <!-- General Tinker JS file -->
+    <link href="/static/assets/js/tinker.js" type="text/javascript"/>
+
     {% block scripts %}{% endblock %}
 
     <div class="collapse navbar-collapse off-canvas-sidebar" data-background-color="white" data-active-color="danger">
